# buzz

./: .env.example  .gitignore  .replit  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  NOSTR.md  README.md  RELEASING.md  SECURITY.md  TESTING.md  VISION.md  VISION_ACTIVITY.md  VISION_AGENT.md  VISION_MESH.md  VISION_MODERATION.md  VISION_PROJECTS.md  VISION_SOVEREIGN.md  docker-compose.yml  justfile  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  preview-features.json  renovate.json  replit.md
.agents/memory/: MEMORY.md  buzz-acp-loopback-auth.md  replit-build-quirks.md  web-ui-parity.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml
.github/workflows/: auto-tag-on-release-pr-merge.yml  ci.yml  docker.yml  helm-chart.yml  linux-canary.yml  mobile-release-candidate.yml  release.yml  signed-macos-canary.yml  sprig.yml  windows-canary.yml
admin-web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
admin-web/src/: Agents.tsx  App.tsx  Channels.tsx  Members.test.tsx  Settings.tsx  api.ts  identity.ts  relay-ws.ts  styles.css  types.ts  useResource.ts
admin-web/tests/: routes.spec.ts
benchmarks/harbor-buzz-orchestra/: README.md
benchmarks/harbor-buzz-orchestra/personas/: orchestrator-m1.md  orchestrator-tb.md  worker-m1.md  worker-tb.md
crates/buzz-acp/: README.md
crates/buzz-acp/src/: acp.rs  base_prompt.md  config.rs  lib.rs  pool.rs  pool_lifecycle.rs  queue.rs  relay.rs  setup_mode.rs
crates/buzz-acp/tests/: pool_lifecycle_state.rs
crates/buzz-admin/src/: main.rs
crates/buzz-agent/: README.md
crates/buzz-agent/src/: agent.rs  config.rs  lib.rs  llm.rs  mcp.rs  types.rs
crates/buzz-agent/tests/: databricks_oauth.rs  golden_transcripts.rs
crates/buzz-auth/src/: lib.rs  nip98_replay.rs
crates/buzz-cli/: Cargo.toml  README.md  TESTING.md
crates/buzz-cli/src/: agent_management.rs  client.rs  error.rs  lib.rs
crates/buzz-conformance/: LIMITS.md  TRACE_SCHEMA.md
crates/buzz-core/src/: channel.rs  kind.rs  lib.rs  relay.rs
crates/buzz-db/src/: admin_moderation.rs  channel.rs  dm.rs  event.rs  lib.rs  migration.rs  product_feedback.rs  push.rs  relay_members.rs  usage.rs  user.rs
crates/buzz-dev-mcp/: Cargo.toml
crates/buzz-dev-mcp/src/: lib.rs  rg.rs  shell.rs
crates/buzz-media/: Cargo.toml
crates/buzz-media/src/: bucket_index.rs  lib.rs  storage.rs  validation.rs
crates/buzz-pairing-cli/: README.md
crates/buzz-persona/: PERSONA_PACK_SPEC.md
crates/buzz-pubsub/src/: nip98_replay.rs
crates/buzz-relay/: CHANGELOG.md  Cargo.toml
crates/buzz-relay-mesh/: Cargo.toml
crates/buzz-relay-mesh/src/: endpoint.rs  gossip.rs  lib.rs  membership.rs  peer.rs  registry.rs  runtime.rs  status.rs  wire.rs
crates/buzz-relay/src/: config.rs  connection.rs  invite_token.rs  lib.rs  main.rs  mesh_boot.rs  metrics.rs  nip11.rs  push_runtime.rs  router.rs  state.rs  storage_sweep.rs  subscription.rs  workflow_sink.rs
crates/buzz-relay/src/api/: bridge.rs  invites.rs  media.rs  mesh_demo.rs  mod.rs  operator.rs
crates/buzz-relay/src/api/admin/: auth.rs  error.rs  mod.rs
crates/buzz-relay/src/api/git/: cas_publish.rs  manifest.rs  transport.rs
crates/buzz-relay/src/audio/: handler.rs  join.rs  mesh.rs  mod.rs  room.rs
crates/buzz-relay/src/handlers/: auth.rs  command_executor.rs  community_provisioning.rs  event.rs  ingest.rs  mod.rs  moderation_authz.rs  moderation_commands.rs  moderation_notices.rs  product_feedback.rs  side_effects.rs
crates/buzz-relay/src/tunnel/: directory.rs  mod.rs  reliable.rs
crates/buzz-sdk/src/: builders.rs  lib.rs
crates/buzz-test-client/tests/: e2e_relay.rs  e2e_workflow_deletion.rs
crates/buzz-workflow/src/: action_sink.rs  lib.rs
crates/buzz-ws-client/src/: connection.rs
crates/git-credential-nostr/: README.md
crates/sprout-agent/: Cargo.toml  README.md
crates/sprout-agent/src/: agent.rs  config.rs  handoff.rs  llm.rs  main.rs  mcp.rs  types.rs
crates/sprout-agent/tests/: regressions.rs
crates/sprout-cli/src/: lib.rs
crates/sprout-dev-mcp/: Cargo.toml
crates/sprout-dev-mcp/src/: main.rs  shell.rs  shim.rs  str_replace.rs
crates/sprout-pair-relay/: Cargo.toml
deploy/compose/: compose.yml
deploy/local/: .gitignore  build-and-deploy.sh  quickstart-ha-values.yaml
desktop/: .gitignore  index.html  package.json  playwright.config.ts  playwright.live.config.ts  tailwind.config.js  test-loader-hooks.mjs
desktop/scripts/: check-file-sizes.mjs  summarize-flaky-tests.mjs
desktop/src/: main.tsx
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
docs/: MCP_DRIVEN_HOOKS.md  git-on-object-storage.md  mesh-llm-local-build.md  multi-tenant-conformance.md  multi-tenant-relay.md  push-gateway-deployment.md  welcome-kickoff-silent-failures.md
docs/admin/: README.md
docs/nips/: NIP-AA.md  NIP-AE.md  NIP-AM.md  NIP-AO.md  NIP-AP.md  NIP-CW.md  NIP-DV.md  NIP-ER.md  NIP-GS.md  NIP-IA.md  NIP-OA.md  NIP-PL.md  NIP-RS.md  NIP-WP.md
docs/spec/: GitOnObjectStore.tla
examples/meadow-core/: README.md
migrations/: 0023_push_match_gate.sql  0024_event_ttl_refresh_shared_lock.sql  0025_relay_invites.sql  0026_channel_model.sql
mobile/: CHANGELOG.md  pubspec.yaml
mobile/scripts/: check-file-sizes.mjs
perf/: RELAY_BUS_SCALING.md
schema/: schema.sql
scripts/: attach-schema-partitions.sql  bundle-sidecars.sh  check-branch-skew.sh  check-pr-image-urls.sh  dev-setup.sh  ensure-mesh-native-runtime.sh  instance-env.sh  mobile-release.sh  post-merge.sh  post-screenshots.sh  prepare-deploy.sh  publish-mobile-release-candidate.sh  release-rulesets.sh  run-tests.sh  seed-admin-dashboard.sh  setup-replit-instance.sh  start-replit.sh  test-mobile-release-candidate-publisher.sh  test-mobile-release-contract.sh  test-release-ref-contract.sh  test-rust-watcher.sh  test-signed-canary-contract.sh  test-ws-membership-gate.js  watch-rust.sh
scripts/nostr-tools-test-node_modules/: package-lock.json  package.json
web/: package-lock.json  package.json  tsconfig.json  vite.config.ts
(+806 files in other folders)
